[gd_scene load_steps=4 format=3 uid="uid://bio3y56p8vy2"]

[ext_resource type="Script" path="res://Playground/Node/CollisionShape/dynamic_shape.gd" id="1_pef07"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_nir2r"]
a = Vector2(75, 78)
b = Vector2(262, 178)

[sub_resource type="CircleShape2D" id="CircleShape2D_tn27t"]

[node name="DynamicShape" type="Node2D"]
script = ExtResource("1_pef07")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="LineArea" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LineArea"]
shape = SubResource("SegmentShape2D_nir2r")

[node name="PointerArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointerArea"]
shape = SubResource("CircleShape2D_tn27t")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="PointerArea" to="." method="_on_pointer_area_area_entered"]
[connection signal="area_exited" from="PointerArea" to="." method="_on_pointer_area_area_exited"]
